Chat workflow now improved